# nginmesh

./: .gitignore  LICENSE  Makefile  README.md  glide.yaml
cmd/inject/: inject.go  main.go
collector/module/: .gitignore  Cargo.toml  Makefile  README.md  nginx.mk
collector/module/collector-ngx/: Cargo.toml
collector/module/collector-ngx/snippets/: tools.MD
collector/module/collector-ngx/src/: .gitignore  collector_report.rs  collector_threads.rs  encode.rs  lib.rs  message.rs
collector/module/collector-ngx/src/ngx/: config.rs  location_config.rs  main_config.rs  mod.rs  request.rs  server_config.rs
collector/module/collector-tests/: Cargo.toml
collector/module/collector-transport/: Cargo.toml
collector/module/docker/: Dockerfile.base  Dockerfile.build-alpine-nginx  Dockerfile.module
collector/module/module/: config  config.make  nginmesh_collector_module.c
collector/module/scripts/: k8-test.sh
collector/module/snippets/: tools.MD
collector/module/test/: README.md  deploy.sh  kafka-client.yml  nginx.yml
istio/agent/: .gitignore  Makefile  README.md  glide.yaml  modules.mk
istio/agent/docker-init/: Dockerfile  Makefile
istio/agent/docker-oss/: Dockerfile  Makefile
istio/agent/docker-tracing/: Dockerfile  Makefile  build_modules.sh
istio/release/: .gitignore  Makefile  istio.VERSION  updateVersion.sh
istio/sidecar/: istio-sidecar-injector-configmap-debug.yaml
istio/tests/: Makefile  README.md
istio/tools/: ingress-system.sh
samples/bookinfo/: README.md  book-nginx.yaml  deploy-telemetry.sh  deploy.sh  watch-logs.sh
(+145 files in other folders)
