[package]
name = "nginmesh-collector-ngx"
version = "0.6.0"
authors = ["Sehyo Chang   sehyo@nginx.com"]



[lib]
doctest = false
test = true
crate-type = ["staticlib","rlib"]



[dependencies]
futures         = "0.1.14"
futures-cpupool = "0.1.5"
tls-api         = "0.1.8"
httpbis         = "0.4.1"
lazy_static     = "1.0.0"
time            = "0.1.38"
base64          = "0.6.0"
serde_json      = "1.0.5"
chrono = "0.4.0"
ngx-rust        =  { git = "https://github.com/nginmesh/ngx-rust.git", version = "0.1.2" }
#ngx-rust        =  { path = "../../ngx-rust/ngx-binding" , version = "0.1.2" }
nginmesh-collector-transport        =  { path = "../collector-transport" , version = "0.6.0" }

[dependencies.kafka]
version = "0.7.0"
default-features = false